Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97518

Mac, Metal RHI - runtime warnings "UI API called from background thread".

    XMLWordPrintable

Details

    • macOS
    • 8e5806b68 (dev), 9579e7581 (6.5), f486d1f4d (dev), e83eb06a7 (6.5), 1d4c34f09 (dev), ee783a17f (6.5)

    Description

      Runtime warnings appear when QSGRendererInterface::MetalRhi (or QSGRendererInterface::Unknown which defaults to Metal) is selected.

      UI API called from background thread: -[NSView layer] must be used from main thread only
      

      I also observe some random crashes in the Metal thread, though in debugging mode only. This is probably related, but not sure.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sami.shalayel Sami Shalayel
              sergei.nevdakh Sergei Nevdakh
              Votes:
              8 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: