rhi: metal: Use scale from the layer we already have

...so that we do not need to call devicePixelRatio() again, which means
one less UI Thread Checker warning in Xcode.

Task-number: QTBUG-97518
Change-Id: I01d54ea113788cd0b141e124a47940f5cd3efabb
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 8e5806b6807df0d39f3bbd2a1c0ed590426e1aa0)